--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "create-react-app": "^1.4.3",
     "h8k-components": "^1.0.0",
     "h8k-design": "^1.0.16",
+    "prettier": "^2.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
-    "save": "^2.3.1",
-    "typescript": "^4.7.4"
+    "save": "^2.3.1"
   },
   "scripts": {
     "prestart": "npm install",
